fixed date label on mobile for training

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -303,7 +303,7 @@ input {
         font-size: 17px !important;
     }
     h2 {
-        font-size: 16px !important;
+        font-size: 18px !important;
     }
     ul {
         margin-left: 5px !important;
